fix title text overflow ellipsis

--- a/src/components/TitleBar.module.css
+++ b/src/components/TitleBar.module.css
@@ -5,7 +5,6 @@
 }
 
 .title-bar-title {
-  width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
